# papertrail

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  alembic.ini  justfile  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  gen-git-mount.sh  postCreate.sh
.devcontainer/ci/: devcontainer.json
.github/workflows/: ci.yml
app/: __init__.py  config.py  di.py  main.py
app/db/: __init__.py  engine.py  migrate.py  models.py  users.py
app/domain/: __init__.py  email.py  email_domains.py  greeting.py  pwned.py  schemas.py  users.py
app/static/: app.css  app.tailwind.css
app/templates/: index.html
app/templates/partials/: greeting.html
app/web/: __init__.py  api.py  auth.py  routes.py
app/web/static/: app.css  app.tailwind.css  assets.sha256
app/web/templates/: base.html  dashboard.html  index.html
app/web/templates/auth/: forgot_password.html  login.html  register.html  reset_password.html  verify_result.html
app/web/templates/components/: ui.html
app/web/templates/partials/: auth_alert.html  greeting.html  verify_needed.html
docs/: e2e-tests.md  frontend-assets.md  frontend.md  migrations.md  multi-agent-dev-setup.md  quality-gate.md  security-checks.md
e2e/: .jscpd.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
e2e/support/: auth.ts  config.ts  credentials.ts  global-setup.ts
e2e/tests/: accessibility.spec.ts  auth.spec.ts  greeting.spec.ts  password-reset.spec.ts  register.spec.ts  verify.spec.ts
frontend/: .cta.json  .dependency-cruiser.js  .gitignore  .prettierignore  README.md  eslint.config.js  knip.json  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: router.tsx
frontend/src/client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
frontend/src/client/@tanstack/: react-query.gen.ts
frontend/src/components/: auth-shell.tsx  form.tsx  route-states.tsx
frontend/src/routes/: __root.tsx  dashboard.tsx  forgot-password.tsx  index.tsx  login.tsx  register.tsx  reset-password.tsx  verify.tsx
migrations/: env.py
migrations/versions/: d3d48e5c5c76_create_user_table.py
scripts/: agent.sh  assets-fingerprint.sh  check.sh  e2e_seed.py  export-openapi.py  fix.sh
tests/: conftest.py  test_app.py  test_auth_routes.py  test_config.py  test_domain.py  test_e2e.py  test_e2e_auth.py  test_email.py  test_email_domains.py  test_pwned.py  test_templates.py
