[project]
name = "papertrail"
version = "0.1.0"
description = "Tool to study the manipulation of science by lobbies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "sqlalchemy>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "pydantic-settings>=2.14.2",
    "aiosmtplib>=5.1.2",
    "pydantic>=2.13.4",
    "httpx>=0.28.1",
    "disposable-email-domains>=0.0.220",
]

[dependency-groups]
dev = [
    "pytest",
    "pyrefly",
    "ruff",
    "pytest-cov>=7.1.0",
    "deptry>=0.25.1",
    "import-linter>=2.13",
    "pytest-asyncio>=1.4.0",
]

[tool.uv]
# This is an application, not a distributable library: don't try to build/install
# the project itself (no build backend needed). `uv run` still puts the repo root
# on sys.path, so `import app` works.
package = false

[tool.pytest.ini_options]
# The project is not installed (see [tool.uv] package = false), so put the repo
# root on sys.path for `import app` and only collect tests from tests/.
pythonpath = ["."]
testpaths = ["tests"]
# Auto-detect async tests/fixtures (no @pytest.mark.asyncio needed) — the auth
# flows are async. Session-scoped DB setup uses asyncio.run so no session-loop
# config is required; per-test engines use NullPool to stay loop-agnostic.
asyncio_mode = "auto"
# Coverage is measured on every run and printed (with the missing line numbers),
# but is intentionally NOT enforced with --cov-fail-under: the report is a tool
# for the author, not a gate. Use it to spot important untested paths. See the
# "Coverage" note in AGENTS.md.
addopts = ["--cov=app", "--cov-report=term-missing:skip-covered"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
# Don't count lines that can never run at test time as "missing".
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.pyrefly]
preset = "strict"
project-includes = ["app", "tests"]
# pytest (prepend import mode) puts tests/ on sys.path, so a test module imports
# shared helpers from conftest as a top-level `conftest` module. Mirror that here
# so the type checker resolves it the same way pytest does at runtime.
search-path = ["tests"]

[tool.ruff]
target-version = "py312"
# Alembic's env.py and its autogenerated revision files are generated code that
# lives outside app/ (pyrefly and import-linter already ignore it); linting and
# reformatting them to the app's strict style would fight `alembic revision`
# every time. deptry still scans them, so `alembic` stays a used dependency.
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["ALL"]
# Only rules that conflict with `ruff format` or with each other are silenced;
# everything else under ALL is satisfied by writing compliant code.
ignore = [
    "COM812", # trailing comma — handled by the formatter
    "ISC001", # implicit string concatenation — conflicts with the formatter
    "D203",   # one-blank-line-before-class — conflicts with D211
    "D213",   # multi-line-summary-second-line — conflicts with D212
]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = [
    "INP001", # standalone operational scripts, not an importable package
]
"tests/**" = [
    "S101",    # asserts are the point of a test
    "S105",    # test fixtures use literal passwords/tokens as data
    "S106",    # ditto, passed as keyword arguments
    "PLR2004", # magic values (200, ...) are fine in test assertions
    "INP001",  # tests/ is intentionally not a package
    "D100",    # module docstrings not required for tests
    "D103",    # docstrings not required for every test function
    "D104",
    "E402",    # conftest sets test env vars before importing the app (by design)
]

# ---------------------------------------------------------------------------
# deptry — dependency hygiene (unused / missing / transitive / misplaced deps).
# ---------------------------------------------------------------------------
[tool.deptry]
# deptry reads the PEP 735 `[dependency-groups]` table natively, so the `dev`
# group is already treated as development-only (test tools like pytest are not
# reported as unused production dependencies). The e2e browser tests are a
# separate TypeScript project (see e2e/), so no Python Playwright dep remains.

[tool.deptry.per_rule_ignores]
# DEP002 = declared but never imported. These are legitimately not imported:
#   uvicorn        - the ASGI server, launched from the CLI / conftest, not a lib
#   python-multipart - pulled in *by* FastAPI to parse form posts; never imported
#   asyncpg        - the async Postgres driver; referenced only via the DB URL
DEP002 = ["uvicorn", "python-multipart", "asyncpg"]

# ---------------------------------------------------------------------------
# import-linter — architecture contracts. Enforces the layered design:
#   web (FastAPI REST API)  →  domain (pure Python)  →  db (Postgres/SQLAlchemy)
# The web layer calls the domain; the domain calls the db. The web must never
# reach the db directly, and lower layers never import higher ones. The domain
# stays free of any framework so its logic is testable in isolation.
# Run: `lint-imports`.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "app"
# Required so the "forbidden" contracts below can name external packages
# (fastapi, starlette, sqlalchemy) as modules the domain/db layers must not import.
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Layered architecture (main → web → domain → db)"
type = "layers"
layers = ["app.main", "app.web", "app.domain", "app.db"]

[[tool.importlinter.contracts]]
name = "Web layer goes through the domain (never straight to the db)"
type = "forbidden"
source_modules = ["app.web"]
forbidden_modules = ["app.db"]
# Only ban a *direct* web → db import. The intended web → domain → db chain is an
# indirect import and must stay allowed once the domain actually calls the db.
allow_indirect_imports = "true"

[[tool.importlinter.contracts]]
name = "Domain layer is pure Python (no web framework, no direct persistence)"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = ["fastapi", "starlette", "sqlalchemy"]
# Ban only *direct* framework imports in the domain. Reaching SQLAlchemy
# indirectly via app.db (domain → db → sqlalchemy) is the whole point of the db
# layer and must remain allowed.
allow_indirect_imports = "true"

[[tool.importlinter.contracts]]
name = "Database layer is independent of the web layer"
type = "forbidden"
source_modules = ["app.db"]
forbidden_modules = ["fastapi", "starlette"]
